# Win32Game

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_ref.txt  hello.html  readme.md  reference.html  save_file.json  sketch.cpp  snapshots.md  todo.md
.github/workflows/: build.yaml  clang-format-check.yaml
src/: application.cpp  application.h  main.c  main.cpp  main_old.cpp
src/core/: unwrap.h
src/engine/: MenuScene_old.cpp  commands.cpp  commands.h  engine.cpp  engine.h  entity_id.h  logging.cpp
src/engine/animation/: animation.h  animation_id.h  animation_system.h  animation_system_OLD.h
src/engine/audio/: audio_id.h  audio_player.cpp  audio_player.h
src/engine/container/: flat_map.h  inplace_vector.h  match_variant.h
src/engine/debug/: assert.cpp  assert.h  debug.cpp  debug.h  debug_state.h  delta_timer.cpp  delta_timer.h  filename_from_path.h  logging.cpp  logging.h  moving_average.cpp  moving_average.h  profiling.h  renderer_test_screen.cpp  renderer_test_screen.h
src/engine/debug/test/: render_test_screen.cpp  render_test_screen.h  rendering_test_screen.cpp  rendering_test_screen.h  rendering_tests.cpp  rendering_tests.h
src/engine/debug/test_screen/: font_test_page.cpp  font_test_page.h  geometry_test_page.cpp  geometry_test_page.h  image_test_page.cpp  image_test_page.h  test_screen.cpp  test_screen.h
src/engine/debug/test_screens/: font_test_screen.cpp  font_test_screen.h  geometry_test_screen.cpp  geometry_test_screen.h  image_test_screen.cpp  image_test_screen.h  test_screens.cpp  test_screens.h
src/engine/file/: file.cpp  file.h  resource_manager.cpp  resource_manager.h  save_file.cpp  save_file.h
src/engine/graphics/: bitmap.cpp  bitmap.h  color.cpp  color.h  font.cpp  font.h  font_id.h  image.cpp  image.h  image_id.h  rect.cpp  rect.h  renderer.cpp  renderer.h  renderer_OLD.cpp  renderer_OLD.h  renderer_OLD_2.cpp  rgba.cpp  rgba.h  window.cpp  window.h
src/engine/input/: button.cpp  button.h  gamepad.cpp  gamepad.h  input.cpp  input.h  input_bindings.cpp  input_bindings.h  keyboard.cpp  keyboard.h  keyboard_stack.cpp  keyboard_stack.h  mouse.cpp  mouse.h  time.cpp  time.h
src/engine/math/: ivec2.cpp  ivec2.h  math.h  math_defines.h  moving_average.cpp  moving_average.h  vec2.cpp  vec2.h
src/engine/render/: window.cpp  window.h
src/engine/scene/: scene.h  scene_manager.cpp  scene_manager.h
src/engine/ui/: screen.h  screen_stack.cpp  screen_stack.h
src/engine/ui/debug_screen/: debug_screen.cpp  debug_screen.h  font_test_page.cpp  font_test_page.h  geometry_test_page.cpp  geometry_test_page.h  image_test_page.cpp  image_test_page.h
src/engine/utility/: string_utility.cpp  string_utility.h
src/engine/windows/: command_line.cpp  command_line.h
src/game/: direction.h  game.cpp  game.h  game_data.h
src/game/scene/: gameplay_scene.cpp  gameplay_scene.h  menu_scene.cpp  menu_scene.h
src/game/ui/: main_menu.cpp  main_menu.h  pause_menu.cpp  pause_menu.h
src/game/ui/debug_screen/: debug_screen.cpp  debug_screen.h  font_test_page.cpp  font_test_page.h  geometry_test_page.cpp  geometry_test_page.h  image_test_page.cpp  image_test_page.h
src/input/: button.cpp  button.h
test/: main.cpp
test/engine/: animation_player_tests.cpp  animation_system_tests.cpp  animation_system_tests_OLD.cpp  button_tests.cpp  flat_map_tests.cpp  inplace_vector_tests.cpp  input_bindings_tests.cpp  keyboard_tests.cpp  moving_average_tests.cpp  renderer_tests.cpp  save_file_tests.cpp  scene_manager_tests.cpp  screen_stack_tests.cpp  uI_system_tests.cpp  ui_system_tests.cpp
test/helpers/: parameterized_tests.h  snapshot_tests.cpp  snapshot_tests.h
test/test_helpers/: parameterized_tests.h
test_report_reference/: index.html
test_report_reference/test_suite_name_1/: index.html
